# go2-contact-guard

./: .gitignore  README.md  pyproject.toml
docs/assets/: go2_long_contact_body_guard.json  go2_long_contact_foot_guard.json
examples/: fetch_unitree_mujoco.sh
scripts/: render_go2_long_contact_body_guard_demo.sh  render_go2_long_contact_foot_guard_demo.sh  render_go2_long_contact_github_demos.sh  view_go2_feet_only_foot_guard_demo.sh
src/go2_mini_lab/: __init__.py  amp.py  audit_nominal_gait_reference.py  backflip_reference.py  baseline_relative_gate.py  cli.py  collect_nominal_gait_reference.py  collect_reference.py  controller.py  diagnostics.py  distill_teacher.py  evaluate.py  event_detector_audit.py  experiment.py  export.py  export_ppo_onnx.py  force_metrics.py  gait_quality_audit.py  gates.py  gym_env.py  history_event_estimator.py  inspect_env.py  mujoco_rollout.py  mujoco_viewer.py  obs_audit.py  onnx_rollout.py  perturb_rollout.py  ppo_rollout.py  pretrain_bc.py  record_long_contact_demo.py  replay_bank.py  rl_check.py  rl_env.py  sb3_tools.py  skill_check.py  teacher_gate.py  train_amp_ppo.py  train_ppo.py  trajectory.py  trajectory_analysis.py  (+1 more)
src/go2_mini_lab/reference/: __init__.py  compliant_adapter.py  convert_rich_rollout_to_nominal.py  nominal_gait.py  reference_audit.py  source.py  zsafe.py
tests/: test_long_contact_demo_recording.py
